<resources>
    <string name="app_name">Booking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="london">London</string>
    <string name="sea_container_london">Sea Container</string>
    <string name="nyx_hotel_london">NYX Hotel</string>
    <string name="maldives">Maldives</string>
    <string name="amaya_kuda_rah_mald">Amaya Kuda Rah</string>
    <string name="lily_beach_mald">Lily Beach</string>
    <string name="amsterdam">Amsterdam</string>
    <string name="eden_hotel_amsterdam">Eden Hotel Amsterdam</string>
    <string name="double_tree_amsterdam">Double Tree by Hilton</string>
    <string name="madrid">Madrid</string>
    <string name="hotel_mora_madrid">Hotel Mora Madrid</string>
    <string name="wellington_hotel">Wellington Hotel Madrid</string>
    <string name="price_title">price each night: </string>
    <string name="price_total">sub total: %s </string>
    <string name="booking_details"> Nights: %1$s \n Room: %2$s \nBooking date: %3$s \n
        Total: %4$s \n\n Thank you!</string>
    <string name="new_booking_order">new Booking</string>
    <string name="price_on_night">price on night:</string>
    <string name="hotel">Hotel Name</string>
    <string name="cancel">cancel</string>
    <string name="next">Next</string>
    <string name="sub_total_tools">subtotal: 30$</string>
    <string name="breakfast_add_20">breakfast (add 20$)</string>
    <string name="three_rooms">three Rooms</string>
    <string name="two_rooms">two Rooms</string>
    <string name="one_room">one Room</string>
    <plurals name="nights">
        <item quantity="one">%d night</item>
        <item quantity="other">%d nights</item>
    </plurals>

</resources>